...
                                <rect key="frame" x="30" y="691" width="333" height="50"/>
                                <color key="backgroundColor" red="1" green="0.8026529362" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="landing_login_button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="oSz-bu-RaY"/>
...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="landingScreen"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Aiz-kf-xaw" secondAttribute="trailing" constant="30" id="3qG-1c-zL5"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cZB-ZP-Gla">
                                <rect key="frame" x="30" y="139" width="333" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_email"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="DFC-V5-CTx"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hfP-KK-l8I">
                                <rect key="frame" x="30" y="194" width="333" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="HKG-y2-qh1"/>
...
                                <rect key="frame" x="30" y="259" width="333" height="50"/>
                                <color key="backgroundColor" red="1" green="0.8026529362" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="oWi-EB-5xJ"/>
...
                        <viewLayoutGuide key="safeArea" id="mTt-9T-BtR"/>
                        <color key="backgroundColor" name="LightYellow"/>
                        <accessibility key="accessibilityConfiguration" identifier="loginScreen"/>
                        <constraints>
                            <constraint firstItem="hfP-KK-l8I" firstAttribute="trailing" secondItem="cZB-ZP-Gla" secondAttribute="trailing" id="17G-l3-4J2"/>
...
                        <viewLayoutGuide key="safeArea" id="AQA-VI-Rol"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="homeScreen"/>
                        <constraints>
                            <constraint firstItem="aqI-16-AML" firstAttribute="centerX" secondItem="xAT-WG-Tqi" secondAttribute="centerX" id="07J-UB-Rr9"/>
...
